201403975/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RBOOLEAN
    RCONTINUE
    RNEW
    RRETURN

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     ptc -> PTCOMA
Rule 5     ptc -> <empty>
Rule 6     incdec -> INC
Rule 7     incdec -> DEC
Rule 8     incdec -> <empty>
Rule 9     break -> RBREAK ptc
Rule 10    break -> <empty>
Rule 11    instruccion -> menu
Rule 12    instruccion -> imprimir
Rule 13    instruccion -> if
Rule 14    instruccion -> switch
Rule 15    instruccion -> while
Rule 16    instruccion -> for
Rule 17    instruccion -> variables
Rule 18    variables -> RVAR ID ptc
Rule 19    variables -> RVAR ID IGUAL expresion ptc
Rule 20    variables -> RVAR ID IGUAL casteo ptc
Rule 21    variables -> ID IGUAL expresion ptc
Rule 22    variables -> ID IGUAL casteo ptc
Rule 23    variables -> ID IGUAL RNULL ptc
Rule 24    variables -> ID incdec ptc
Rule 25    casteo -> PARA tipo PARC expresion
Rule 26    tipo -> RINT
Rule 27    tipo -> RDOUBLE
Rule 28    tipo -> RCHAR
Rule 29    tipo -> RSTRING
Rule 30    expresion -> expresion MAS expresion
Rule 31    expresion -> expresion MENOS expresion
Rule 32    expresion -> expresion POR expresion
Rule 33    expresion -> expresion DIV expresion
Rule 34    expresion -> expresion POT expresion
Rule 35    expresion -> expresion MOD expresion
Rule 36    expresion -> expresion IGUALIGUAL expresion
Rule 37    expresion -> expresion MAYORQUE expresion
Rule 38    expresion -> expresion MAYORIGUAL expresion
Rule 39    expresion -> expresion MENORQUE expresion
Rule 40    expresion -> expresion MENORIGUAL expresion
Rule 41    expresion -> expresion DIFERENTE expresion
Rule 42    expresion -> expresion SAND expresion
Rule 43    expresion -> expresion SOR expresion
Rule 44    expresion -> MENOS expresion
Rule 45    expresion -> NEGACION expresion
Rule 46    expresion -> PARA expresion PARC
Rule 47    expresion -> CADENA
Rule 48    expresion -> CARACTER
Rule 49    expresion -> RTRUE
Rule 50    expresion -> RFALSE
Rule 51    expresion -> ENTERO incdec
Rule 52    expresion -> DECIMAL incdec
Rule 53    expresion -> ID incdec
Rule 54    expresion -> accesoArreglo incdec
Rule 55    accesoArreglo -> ID listapos
Rule 56    listapos -> listapos pos
Rule 57    listapos -> pos
Rule 58    pos -> CORA expresion CORC
Rule 59    if -> RIF PARA expresion PARC LLAVEA opciones LLAVEC
Rule 60    if -> RIF PARA expresion PARC LLAVEA opciones LLAVEC RELSE LLAVEA opciones LLAVEC
Rule 61    if -> RIF PARA expresion PARC LLAVEA opciones LLAVEC RELSE if
Rule 62    opciones -> opciones opcion
Rule 63    opciones -> opcion
Rule 64    opcion -> instrucciones
Rule 65    opcion -> break
Rule 66    switch -> RSWITCH PARA expresion PARC LLAVEA caselist default LLAVEC
Rule 67    switch -> RSWITCH PARA expresion PARC LLAVEA caselist LLAVEC
Rule 68    switch -> RSWITCH PARA expresion PARC LLAVEA default LLAVEC
Rule 69    caselist -> caselist case
Rule 70    caselist -> case
Rule 71    case -> RCASE expresion DOSPT instrucciones break
Rule 72    default -> RDEFAULT DOSPT instrucciones break
Rule 73    while -> RWHILE PARA expresion PARC LLAVEA opciones LLAVEC
Rule 74    for -> RFOR PARA variables expresion PTCOMA variables PARC LLAVEA opciones LLAVEC
Rule 75    menu -> RMAIN PARA PARC LLAVEA instrucciones LLAVEC
Rule 76    imprimir -> RPRINT PARA expresion PARC ptc

Terminals, with rules where they appear

CADENA               : 47
CARACTER             : 48
CORA                 : 58
CORC                 : 58
DEC                  : 7
DECIMAL              : 52
DIFERENTE            : 41
DIV                  : 33
DOSPT                : 71 72
ENTERO               : 51
ID                   : 18 19 20 21 22 23 24 53 55
IGUAL                : 19 20 21 22 23
IGUALIGUAL           : 36
INC                  : 6
LLAVEA               : 59 60 60 61 66 67 68 73 74 75
LLAVEC               : 59 60 60 61 66 67 68 73 74 75
MAS                  : 30
MAYORIGUAL           : 38
MAYORQUE             : 37
MENORIGUAL           : 40
MENORQUE             : 39
MENOS                : 31 44
MOD                  : 35
NEGACION             : 45
PARA                 : 25 46 59 60 61 66 67 68 73 74 75 76
PARC                 : 25 46 59 60 61 66 67 68 73 74 75 76
POR                  : 32
POT                  : 34
PTCOMA               : 4 74
RBOOLEAN             : 
RBREAK               : 9
RCASE                : 71
RCHAR                : 28
RCONTINUE            : 
RDEFAULT             : 72
RDOUBLE              : 27
RELSE                : 60 61
RFALSE               : 50
RFOR                 : 74
RIF                  : 59 60 61
RINT                 : 26
RMAIN                : 75
RNEW                 : 
RNULL                : 23
RPRINT               : 76
RRETURN              : 
RSTRING              : 29
RSWITCH              : 66 67 68
RTRUE                : 49
RVAR                 : 18 19 20
RWHILE               : 73
SAND                 : 42
SOR                  : 43
error                : 

Nonterminals, with rules where they appear

accesoArreglo        : 54
break                : 65 71 72
case                 : 69 70
caselist             : 66 67 69
casteo               : 20 22
default              : 66 68
expresion            : 19 21 25 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 45 46 58 59 60 61 66 67 68 71 73 74 76
for                  : 16
if                   : 13 61
imprimir             : 12
incdec               : 24 51 52 53 54
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 64 71 72 75
listapos             : 55 56
menu                 : 11
opcion               : 62 63
opciones             : 59 60 60 61 62 73 74
pos                  : 56 57
ptc                  : 9 18 19 20 21 22 23 24 76
switch               : 14
tipo                 : 25
variables            : 17 74 74
while                : 15

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (11) instruccion -> . menu
    (12) instruccion -> . imprimir
    (13) instruccion -> . if
    (14) instruccion -> . switch
    (15) instruccion -> . while
    (16) instruccion -> . for
    (17) instruccion -> . variables
    (75) menu -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (76) imprimir -> . RPRINT PARA expresion PARC ptc
    (59) if -> . RIF PARA expresion PARC LLAVEA opciones LLAVEC
    (60) if -> . RIF PARA expresion PARC LLAVEA opciones LLAVEC RELSE LLAVEA opciones LLAVEC
    (61) if -> . RIF PARA expresion PARC LLAVEA opciones LLAVEC RELSE if
    (66) switch -> . RSWITCH PARA expresion PARC LLAVEA caselist default LLAVEC
    (67) switch -> . RSWITCH PARA expresion PARC LLAVEA caselist LLAVEC
    (68) switch -> . RSWITCH PARA expresion PARC LLAVEA default LLAVEC
    (73) while -> . RWHILE PARA expresion PARC LLAVEA opciones LLAVEC
    (74) for -> . RFOR PARA variables expresion PTCOMA variables PARC LLAVEA opciones LLAVEC
    (18) variables -> . RVAR ID ptc
    (19) variables -> . RVAR ID IGUAL expresion ptc
    (20) variables -> . RVAR ID IGUAL casteo ptc
    (21) variables -> . ID IGUAL expresion ptc
    (22) variables -> . ID IGUAL casteo ptc
    (23) variables -> . ID IGUAL RNULL ptc
    (24) variables -> . ID incdec ptc

    RMAIN           shift and go to state 11
    RPRINT          shift and go to state 12
    RIF             shift and go to state 13
    RSWITCH         shift and go to state 14
    RWHILE          shift and go to state 15
    RFOR            shift and go to state 16
    RVAR            shift and go to state 17
    ID              shift and go to state 18

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    menu                           shift and go to state 4
    imprimir                       shift and go to state 5
    if                             shift and go to state 6
    switch                         shift and go to state 7
    while                          shift and go to state 8
    for                            shift and go to state 9
    variables                      shift and go to state 10

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (11) instruccion -> . menu
    (12) instruccion -> . imprimir
    (13) instruccion -> . if
    (14) instruccion -> . switch
    (15) instruccion -> . while
    (16) instruccion -> . for
    (17) instruccion -> . variables
    (75) menu -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (76) imprimir -> . RPRINT PARA expresion PARC ptc
    (59) if -> . RIF PARA expresion PARC LLAVEA opciones LLAVEC
    (60) if -> . RIF PARA expresion PARC LLAVEA opciones LLAVEC RELSE LLAVEA opciones LLAVEC
    (61) if -> . RIF PARA expresion PARC LLAVEA opciones LLAVEC RELSE if
    (66) switch -> . RSWITCH PARA expresion PARC LLAVEA caselist default LLAVEC
    (67) switch -> . RSWITCH PARA expresion PARC LLAVEA caselist LLAVEC
    (68) switch -> . RSWITCH PARA expresion PARC LLAVEA default LLAVEC
    (73) while -> . RWHILE PARA expresion PARC LLAVEA opciones LLAVEC
    (74) for -> . RFOR PARA variables expresion PTCOMA variables PARC LLAVEA opciones LLAVEC
    (18) variables -> . RVAR ID ptc
    (19) variables -> . RVAR ID IGUAL expresion ptc
    (20) variables -> . RVAR ID IGUAL casteo ptc
    (21) variables -> . ID IGUAL expresion ptc
    (22) variables -> . ID IGUAL casteo ptc
    (23) variables -> . ID IGUAL RNULL ptc
    (24) variables -> . ID incdec ptc

    $end            reduce using rule 1 (init -> instrucciones .)
    RMAIN           shift and go to state 11
    RPRINT          shift and go to state 12
    RIF             shift and go to state 13
    RSWITCH         shift and go to state 14
    RWHILE          shift and go to state 15
    RFOR            shift and go to state 16
    RVAR            shift and go to state 17
    ID              shift and go to state 18

    instruccion                    shift and go to state 19
    menu                           shift and go to state 4
    imprimir                       shift and go to state 5
    if                             shift and go to state 6
    switch                         shift and go to state 7
    while                          shift and go to state 8
    for                            shift and go to state 9
    variables                      shift and go to state 10

state 3

    (3) instrucciones -> instruccion .

    RMAIN           reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RSWITCH         reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    RVAR            reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEC          reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RDEFAULT        reduce using rule 3 (instrucciones -> instruccion .)
    RCASE           reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (11) instruccion -> menu .

    RMAIN           reduce using rule 11 (instruccion -> menu .)
    RPRINT          reduce using rule 11 (instruccion -> menu .)
    RIF             reduce using rule 11 (instruccion -> menu .)
    RSWITCH         reduce using rule 11 (instruccion -> menu .)
    RWHILE          reduce using rule 11 (instruccion -> menu .)
    RFOR            reduce using rule 11 (instruccion -> menu .)
    RVAR            reduce using rule 11 (instruccion -> menu .)
    ID              reduce using rule 11 (instruccion -> menu .)
    $end            reduce using rule 11 (instruccion -> menu .)
    LLAVEC          reduce using rule 11 (instruccion -> menu .)
    RBREAK          reduce using rule 11 (instruccion -> menu .)
    RDEFAULT        reduce using rule 11 (instruccion -> menu .)
    RCASE           reduce using rule 11 (instruccion -> menu .)


state 5

    (12) instruccion -> imprimir .

    RMAIN           reduce using rule 12 (instruccion -> imprimir .)
    RPRINT          reduce using rule 12 (instruccion -> imprimir .)
    RIF             reduce using rule 12 (instruccion -> imprimir .)
    RSWITCH         reduce using rule 12 (instruccion -> imprimir .)
    RWHILE          reduce using rule 12 (instruccion -> imprimir .)
    RFOR            reduce using rule 12 (instruccion -> imprimir .)
    RVAR            reduce using rule 12 (instruccion -> imprimir .)
    ID              reduce using rule 12 (instruccion -> imprimir .)
    $end            reduce using rule 12 (instruccion -> imprimir .)
    LLAVEC          reduce using rule 12 (instruccion -> imprimir .)
    RBREAK          reduce using rule 12 (instruccion -> imprimir .)
    RDEFAULT        reduce using rule 12 (instruccion -> imprimir .)
    RCASE           reduce using rule 12 (instruccion -> imprimir .)


state 6

    (13) instruccion -> if .

    RMAIN           reduce using rule 13 (instruccion -> if .)
    RPRINT          reduce using rule 13 (instruccion -> if .)
    RIF             reduce using rule 13 (instruccion -> if .)
    RSWITCH         reduce using rule 13 (instruccion -> if .)
    RWHILE          reduce using rule 13 (instruccion -> if .)
    RFOR            reduce using rule 13 (instruccion -> if .)
    RVAR            reduce using rule 13 (instruccion -> if .)
    ID              reduce using rule 13 (instruccion -> if .)
    $end            reduce using rule 13 (instruccion -> if .)
    LLAVEC          reduce using rule 13 (instruccion -> if .)
    RBREAK          reduce using rule 13 (instruccion -> if .)
    RDEFAULT        reduce using rule 13 (instruccion -> if .)
    RCASE           reduce using rule 13 (instruccion -> if .)


state 7

    (14) instruccion -> switch .

    RMAIN           reduce using rule 14 (instruccion -> switch .)
    RPRINT          reduce using rule 14 (instruccion -> switch .)
    RIF             reduce using rule 14 (instruccion -> switch .)
    RSWITCH         reduce using rule 14 (instruccion -> switch .)
    RWHILE          reduce using rule 14 (instruccion -> switch .)
    RFOR            reduce using rule 14 (instruccion -> switch .)
    RVAR            reduce using rule 14 (instruccion -> switch .)
    ID              reduce using rule 14 (instruccion -> switch .)
    $end            reduce using rule 14 (instruccion -> switch .)
    LLAVEC          reduce using rule 14 (instruccion -> switch .)
    RBREAK          reduce using rule 14 (instruccion -> switch .)
    RDEFAULT        reduce using rule 14 (instruccion -> switch .)
    RCASE           reduce using rule 14 (instruccion -> switch .)


state 8

    (15) instruccion -> while .

    RMAIN           reduce using rule 15 (instruccion -> while .)
    RPRINT          reduce using rule 15 (instruccion -> while .)
    RIF             reduce using rule 15 (instruccion -> while .)
    RSWITCH         reduce using rule 15 (instruccion -> while .)
    RWHILE          reduce using rule 15 (instruccion -> while .)
    RFOR            reduce using rule 15 (instruccion -> while .)
    RVAR            reduce using rule 15 (instruccion -> while .)
    ID              reduce using rule 15 (instruccion -> while .)
    $end            reduce using rule 15 (instruccion -> while .)
    LLAVEC          reduce using rule 15 (instruccion -> while .)
    RBREAK          reduce using rule 15 (instruccion -> while .)
    RDEFAULT        reduce using rule 15 (instruccion -> while .)
    RCASE           reduce using rule 15 (instruccion -> while .)


state 9

    (16) instruccion -> for .

    RMAIN           reduce using rule 16 (instruccion -> for .)
    RPRINT          reduce using rule 16 (instruccion -> for .)
    RIF             reduce using rule 16 (instruccion -> for .)
    RSWITCH         reduce using rule 16 (instruccion -> for .)
    RWHILE          reduce using rule 16 (instruccion -> for .)
    RFOR            reduce using rule 16 (instruccion -> for .)
    RVAR            reduce using rule 16 (instruccion -> for .)
    ID              reduce using rule 16 (instruccion -> for .)
    $end            reduce using rule 16 (instruccion -> for .)
    LLAVEC          reduce using rule 16 (instruccion -> for .)
    RBREAK          reduce using rule 16 (instruccion -> for .)
    RDEFAULT        reduce using rule 16 (instruccion -> for .)
    RCASE           reduce using rule 16 (instruccion -> for .)


state 10

    (17) instruccion -> variables .

    RMAIN           reduce using rule 17 (instruccion -> variables .)
    RPRINT          reduce using rule 17 (instruccion -> variables .)
    RIF             reduce using rule 17 (instruccion -> variables .)
    RSWITCH         reduce using rule 17 (instruccion -> variables .)
    RWHILE          reduce using rule 17 (instruccion -> variables .)
    RFOR            reduce using rule 17 (instruccion -> variables .)
    RVAR            reduce using rule 17 (instruccion -> variables .)
    ID              reduce using rule 17 (instruccion -> variables .)
    $end            reduce using rule 17 (instruccion -> variables .)
    LLAVEC          reduce using rule 17 (instruccion -> variables .)
    RBREAK          reduce using rule 17 (instruccion -> variables .)
    RDEFAULT        reduce using rule 17 (instruccion -> variables .)
    RCASE           reduce using rule 17 (instruccion -> variables .)


state 11

    (75) menu -> RMAIN . PARA PARC LLAVEA instrucciones LLAVEC

    PARA            shift and go to state 20


state 12

    (76) imprimir -> RPRINT . PARA expresion PARC ptc

    PARA            shift and go to state 21


state 13

    (59) if -> RIF . PARA expresion PARC LLAVEA opciones LLAVEC
    (60) if -> RIF . PARA expresion PARC LLAVEA opciones LLAVEC RELSE LLAVEA opciones LLAVEC
    (61) if -> RIF . PARA expresion PARC LLAVEA opciones LLAVEC RELSE if

    PARA            shift and go to state 22


state 14

    (66) switch -> RSWITCH . PARA expresion PARC LLAVEA caselist default LLAVEC
    (67) switch -> RSWITCH . PARA expresion PARC LLAVEA caselist LLAVEC
    (68) switch -> RSWITCH . PARA expresion PARC LLAVEA default LLAVEC

    PARA            shift and go to state 23


state 15

    (73) while -> RWHILE . PARA expresion PARC LLAVEA opciones LLAVEC

    PARA            shift and go to state 24


state 16

    (74) for -> RFOR . PARA variables expresion PTCOMA variables PARC LLAVEA opciones LLAVEC

    PARA            shift and go to state 25


state 17

    (18) variables -> RVAR . ID ptc
    (19) variables -> RVAR . ID IGUAL expresion ptc
    (20) variables -> RVAR . ID IGUAL casteo ptc

    ID              shift and go to state 26


state 18

    (21) variables -> ID . IGUAL expresion ptc
    (22) variables -> ID . IGUAL casteo ptc
    (23) variables -> ID . IGUAL RNULL ptc
    (24) variables -> ID . incdec ptc
    (6) incdec -> . INC
    (7) incdec -> . DEC
    (8) incdec -> .
